Adicionada a entidade user sem criptografia, repositorios de user, usecase de user, pastas DTO.
