# src/routes/SpecificationRoutes.ts
@@ -1,17 +1,0 @@
-import { Router } from "express";
-import { createSpecificationController } from "../modules/cars/useCases/createSpecification";
-import { listSpecificationsController } from "../modules/cars/useCases/listSpecifications";
-
-
-const specificationRoutes = Router();
-
-
-specificationRoutes.post("/",(request, response)=>{
-    return createSpecificationController.handle(request,response);
-});
-
-specificationRoutes.get("/", (request,response)=>{
-    return listSpecificationsController.handle(request, response);
-});
-
-export { specificationRoutes };
