# src/routes/categories.routes.ts
@@ -1,24 +1,23 @@
 import {Router} from "express";
 import  multer  from "multer";
 
-import { createCategoryController } from "../modules/cars/useCases/createCategory";
-import { listCategoryController } from "../modules/cars/useCases/listCategories";
-import { importCategoryController } from "../modules/cars/useCases/importCategory";
+import { CreateCategoryController } from "../modules/cars/useCases/createCategory/CreateCategoryController";
+import { ImportCategoryController } from "../modules/cars/useCases/importCategory/ImportCategoryController";
+import { ListCategoriesController } from "../modules/cars/useCases/listCategories/ListCategoriesController";
 
 const categoriesRoutes = Router();
 const upload = multer({
     dest: "./tmp"
 })
 
-categoriesRoutes.post("/", (request, response)=> {
-    return createCategoryController.handle(request, response);
-});
+const createCategoryController = new CreateCategoryController();
+const importCategoryController = new ImportCategoryController();
+const listCategoryController = new ListCategoriesController();
 
-categoriesRoutes.get("/", (request,response)=>{
-    return listCategoryController.handle(request, response);
-})
+categoriesRoutes.post("/", createCategoryController.handle);
 
-categoriesRoutes.post("/import", upload.single("file") ,(request, response)=>{ 
-    return importCategoryController.handle(request,response);
-})
+categoriesRoutes.get("/", listCategoryController.handle)
+
+categoriesRoutes.post("/import", upload.single("file") ,importCategoryController.handle);
+
 export {categoriesRoutes};
