# src/routes/index.ts
@@ -1,10 +1,13 @@
 import {Router} from "express"
 import { categoriesRoutes } from "./categories.routes";
-import { specificationRoutes } from "./SpecificationRoutes";
+import { specificationsRoutes } from "./specifications.routes";
+import { usersRoutes } from "./users.routes";
 
 const router = Router();
 
 router.use("/categories", categoriesRoutes);
-router.use("/specification", specificationRoutes);
+router.use("/specifications", specificationsRoutes);
+router.use("/users", usersRoutes);
+
 
 export {router};
