# src/routes/specifications.routes.ts
@@ -1,0 +1,15 @@
+import { Router } from "express";
+import { CreateSpecificationController } from "../modules/cars/useCases/createSpecification/CreateSpecificationController";
+import { ListSpecificationsController } from "../modules/cars/useCases/listSpecifications/ListSpecificationsController";
+
+
+const specificationsRoutes = Router();
+
+const createSpecificationController = new CreateSpecificationController();
+const listSpecificationsController = new ListSpecificationsController();
+
+specificationsRoutes.post("/",createSpecificationController.handle);
+
+specificationsRoutes.get("/", listSpecificationsController.handle)
+
+export { specificationsRoutes };
